added songs component (display, filter, sync and add to playlist functionalities)

--- a/client/src/app/features/main-view/components/main-view/main-view.component.html
+++ b/client/src/app/features/main-view/components/main-view/main-view.component.html
@@ -1,9 +1,6 @@
-<div *ngIf="formattedSong" class="container-padding">
-    <h3>{{ formattedSong.title }}</h3>
-    <p *ngFor="let verse of formattedSong.verses" class="song-margin-top">{{ verse }}</p>
-</div>
-
-<div *ngIf="formattedPlaylist" class="container-padding">
-    <h4>{{ formattedPlaylist.date }}</h4>
-    <p *ngFor="let song of formattedPlaylist.songs" class="song-margin-top">{{ song }}</p>
+<div class="main-container">
+    <app-songs class="songs"></app-songs>
+    <div class="preview-song"></div>
+    <app-playlist class="playlist"></app-playlist>
+    <div class="live-song"></div>
 </div>
