--- a/client/src/app/features/main-view/components/playlist/playlist.component.html
+++ b/client/src/app/features/main-view/components/playlist/playlist.component.html
@@ -8,14 +8,14 @@
         </div>
     </div>
     <div class="playlist-container">
-        <div *ngIf="currentPlaylist">
-            <div *ngFor="let song of currentPlaylist.songs" class="playlist-song-container">
-                <span>{{ song.title }}</span>
-                <div>
-                    <mat-icon class="live-icon" (click)="presentSong(song)">play_arrow_outline</mat-icon>
-                    <mat-icon class="delete-icon" (click)="removeSongFromPlaylist(song)">delete</mat-icon>
+            <div *ngIf="currentPlaylist" cdkDropList class="playlist" (cdkDropListDropped)="drop($event)">
+                <div *ngFor="let song of currentPlaylist.songs" class="playlist-song-container" cdkDrag>
+                    <span>{{ song.title }}</span>
+                    <div>
+                        <mat-icon class="live-icon" (click)="presentSong(song)">play_arrow_outline</mat-icon>
+                        <mat-icon class="delete-icon" (click)="removeSongFromPlaylist(song)">delete</mat-icon>
+                    </div>
                 </div>
             </div>
-        </div>
     </div>
 </div>
