--- a/client/src/app/features/main-view/components/playlist/playlist.component.scss
+++ b/client/src/app/features/main-view/components/playlist/playlist.component.scss
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     margin-top: 5px;
+    cursor: pointer;
 }
 
 .playlist-song-container span {
@@ -44,4 +45,30 @@
 .live-icon {
     transform: scale(1);
     color: rgb(228, 75, 75);
+}
+
+.cdk-drag-preview {
+    background-color: white;
+    opacity: 1;
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+        0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+    opacity: 0;
+}
+
+.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.playlist-song-container:last-child {
+    border: none;
+}
+
+.playlist.cdk-drop-list-dragging .playlist-song-container:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
