--- a/client/src/app/features/main-view/components/playlist/playlist.component.scss
+++ b/client/src/app/features/main-view/components/playlist/playlist.component.scss
@@ -49,6 +49,7 @@
 
 .cdk-drag-preview {
     background-color: white;
+    padding: 5px;
     opacity: 1;
     box-sizing: border-box;
     border-radius: 4px;
