--- a/client/src/app/features/main-view/components/playlist/playlist.component.scss
+++ b/client/src/app/features/main-view/components/playlist/playlist.component.scss
@@ -16,6 +16,8 @@
 .playlist-container {
     display: flex;
     flex-direction: column;
+    height: 28vh;
+    overflow-y: auto;
 }
 
 .playlist-song-container {
