redesigned the main view

--- a/client/src/app/features/main-view/components/main-view/main-view.component.html
+++ b/client/src/app/features/main-view/components/main-view/main-view.component.html
@@ -1,6 +1,5 @@
 <div class="main-container">
     <app-songs class="songs"></app-songs>
-    <div class="preview-song"></div>
+    <app-pre-presentation class="preview-song"></app-pre-presentation>
     <app-playlist class="playlist"></app-playlist>
-    <div class="live-song"></div>
 </div>
