--- a/client/src/app/features/main-view/components/main-view/main-view.component.scss
+++ b/client/src/app/features/main-view/components/main-view/main-view.component.scss
@@ -11,18 +11,8 @@
     padding: 20px 0 0 20px;
 }
 
-// .songs {
-//     background-color: blue;
-// }
-
-// .preview-song {
-//     background-color: red;
-// }
-
-// .playlist {
-//     background-color: orange;
-// }
-
-// .live-song {
-//     background-color: purple;
-// }
+.preview-song {
+    grid-column: 2 / 2;
+    grid-row: 1 / 3;
+    padding-top: 0;
+}
