--- a/client/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.scss
+++ b/client/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.scss
@@ -31,7 +31,7 @@
 }
 
 .verse-container {
-    margin-top: 20px;
+    margin-bottom: 30px;
     cursor: pointer;
 }
 
@@ -54,9 +54,4 @@
 .live-btn {
     background-color: #fa0019 !important;
     color: rgb(253, 250, 250) !important;
-    // font-weight: medium;
-    // font-size: 1rem;
-    // letter-spacing: 1px;
-    // height: 30px;
-    // width: 60px;
 }
