--- a/client/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.html
+++ b/client/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.html
@@ -1,7 +1,8 @@
 <div class="container">
     <div class="presentation-buttons">
-        <button mat-flat-button (click)="terminatePresentation()" class="end-btn">stop</button>
-        <button mat-mini-fab (click)="displayVerse(currentDisplayedSong.verses[0]); startPresentation()"
+        <button mat-flat-button (click)="setBlackScreen()" class="black-screen-btn"></button>
+        <button class="{{isPresentationLive ? 'ongoing-presentation-btn' : 'live-btn'}}" mat-mini-fab
+            (click)="displayVerse(currentDisplayedSong.verses[0]); isPresentationLive ? terminatePresentation() : startPresentation()"
             class="live-btn">
             <mat-icon fontIcon="videocam"></mat-icon>
         </button>
