--- a/client/src/app/features/presentation-view/components/presentation-view/presentation-view.component.html
+++ b/client/src/app/features/presentation-view/components/presentation-view/presentation-view.component.html
@@ -1,5 +1,5 @@
 <div class="presentation-container">
-    <div *ngIf="currentVerse" class="verse">
+    <div *ngIf="!blackScreen && currentVerse" class="verse">
         <div *ngFor="let line of currentVerse.lines" class="line">{{ line }}</div>
     </div>
 </div>
