--- a/client/src/app/features/controller-view/components/songs/songs.component.html
+++ b/client/src/app/features/controller-view/components/songs/songs.component.html
@@ -1,24 +1,42 @@
-<div class="container">
-    <div class="header-container">
-        <h2>Songs</h2>
-        <div class="sync-songs">
+<mat-tab-group>
+    <mat-tab label="Songs">
+        <div class="search-container">
+            <mat-form-field class="search-input">
+                <mat-label>Search songs...</mat-label>
+                <input matInput [formControl]="searchSongInput">
+            </mat-form-field>
             <button mat-icon-button class="search-btn" (click)="syncSongs()">
                 <mat-icon>sync</mat-icon>
             </button>
         </div>
-    </div>
-    <div class="search-container">
-        <mat-form-field class="search-input">
-            <mat-label>Search songs...</mat-label>
-            <input matInput [formControl]="searchSong">
-        </mat-form-field>
-    </div>
-    <div class="songs-container" (scroll)="onScroll($event)">
-        <div *ngFor="let song of songs" class="song">
-            <span>{{ song.title.split(' (')[0].split(' - ')[0] }}</span>
-            <div>
-                <mat-icon fontIcon="add" class="add-icon" (click)="addSongToPlaylist(song)"></mat-icon>
+        <div class="songs-container" (scroll)="onScroll($event)">
+            <div *ngFor="let song of songs" class="song">
+                <span>{{ song.title.split(' (')[0].split(' - ')[0] }}</span>
+                <div>
+                    <mat-icon fontIcon="add" class="add-icon" (click)="addSongToPlaylist(song)"></mat-icon>
+                </div>
             </div>
-        </div>        
-    </div>
-</div>
+        </div>
+    </mat-tab>
+    <mat-tab label="Bible">
+        <div class="bible-search-container">
+            <mat-form-field class="search-input">
+                <mat-label>Search bible passages...</mat-label>
+                <input matInput [formControl]="searchBibleInput">
+            </mat-form-field>
+            <button mat-icon-button class="bible-books-btn" (click)="openBibleBooksDialog()">
+                <mat-icon>menu_book</mat-icon>
+            </button>
+        </div>
+        <div *ngIf="searchedBiblePassage else noPassageFound" class="bible-passage-container">
+            <button mat-stroked-button class="present-passage-btn">Present passage</button>
+            <p *ngFor="let verse of searchedBiblePassage.verses" class="bible-verse">
+                <sup>{{ verse.verse }}</sup>
+                {{ verse.text }}
+            </p>
+        </div>
+        <ng-template #noPassageFound>
+            <p *ngIf="searchBibleInput.dirty && !searchBibleInput.pristine">No passages found...</p>
+        </ng-template>
+    </mat-tab>
+</mat-tab-group>
