--- a/client/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.scss
+++ b/client/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.scss
@@ -12,14 +12,14 @@
     text-align: center;
     font-size: 1rem;
     overflow-y: auto;
-    padding: 30px;
+    padding: 0 80px 0 80px;
 }
 
 .live-presentation-container {
     flex: 1;
     background-color: black;
     color: white;
-    justify-content: center;
+    padding-top: 25px;
 }
 
 .pre-presentation-container {
@@ -59,4 +59,19 @@
 .live-btn {
     background-color: #fa0019;
     color: rgb(253, 250, 250);
+}
+
+.delete-icon {
+    color: #888888;
+    transform: scale(1);
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.slide {
+    margin-bottom: 30px;
+}
+
+.slide p {
+    margin-bottom: 0 !important;
 }
