--- a/client/src/app/features/presentation-view/components/presentation-view/presentation-view.component.html
+++ b/client/src/app/features/presentation-view/components/presentation-view/presentation-view.component.html
@@ -2,4 +2,7 @@
     <div *ngIf="!blackScreen && currentVerse" class="verse">
         <div *ngFor="let line of currentVerse.lines" class="line">{{ line }}</div>
     </div>
+    <div *ngIf="!blackScreen && currentBiblePassage" class="passage">
+        <p class="bible-verse">{{ currentBiblePassage.text }}</p>
+    </div>
 </div>
