implemented alert notifications when syncing songs and playlists

--- a/client/src/app/features/controller-view/components/playlist-search-dialog/playlist-search-dialog.component.html
+++ b/client/src/app/features/controller-view/components/playlist-search-dialog/playlist-search-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="mat-dialog-header">
     <h2>Search playlists</h2>
-    <button mat-flat-button color="primary" (click)="syncPlaylists()">Sync playlists</button>
+    <button mat-flat-button color="primary" (click)="syncPlaylists()" [disabled]="syncLoading">Sync playlists</button>
 </div>
 <div mat-dialog-title>
     <mat-form-field class="search-input">
