--- a/client/src/app/features/controller-view/components/songs/songs.component.html
+++ b/client/src/app/features/controller-view/components/songs/songs.component.html
@@ -5,7 +5,7 @@
                 <mat-label>Search songs...</mat-label>
                 <input matInput [formControl]="searchSongInput">
             </mat-form-field>
-            <button mat-icon-button class="search-btn" (click)="syncSongs()">
+            <button mat-icon-button class="search-btn" (click)="syncSongs()" [disabled]="syncLoading">
                 <mat-icon>sync</mat-icon>
             </button>
         </div>
