--- a/client/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.scss
+++ b/client/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.scss
@@ -61,15 +61,24 @@
     color: rgb(253, 250, 250);
 }
 
+.decrease-font-size-icon,
+.increase-font-size-icon,
 .delete-icon {
-    color: #888888;
+    color: #555555;
     transform: scale(1);
     cursor: pointer;
     margin-right: 10px;
 }
 
+.decrease-font-size-icon,
+.increase-font-size-icon {
+    color: #858585;
+}
+
 .slide {
     margin-bottom: 30px;
+    font-size: 16px;
+    line-height: 150%;
 }
 
 .slide p {
