--- a/client/src/app/features/controller-view/components/bible-books-dialog/bible-books-dialog.component.html
+++ b/client/src/app/features/controller-view/components/bible-books-dialog/bible-books-dialog.component.html
@@ -2,20 +2,21 @@
     <div class="old-testament-container">
         <h3>Vechiul Testament</h3>
         <div *ngFor="let book of bibleBooks.oldTestament">
-            <p (click)="selectBook(book)">{{ book.title === "SNG" ? "Cântarea Cântărilor" : book.title }}</p>
+            <p (click)="selectBook(book)" data-testid="selectOTBookBtn">{{ book.title === "SNG" ? "Cântarea Cântărilor"
+                : book.title }}</p>
         </div>
     </div>
     <div class="new-testament-container">
         <h3>Noul Testament</h3>
         <div *ngFor="let book of bibleBooks.newTestament">
-            <p (click)="selectBook(book)">{{ book.title }}</p>
+            <p (click)="selectBook(book)" data-testid="selectNTBookBtn">{{ book.title }}</p>
         </div>
     </div>
     <mat-divider [vertical]="true" class="divider"></mat-divider>
     <div class="selected-book">
         <h3>{{ selectedBook.title === "SNG" ? "Cântarea Cântărilor" : selectedBook.title }}</h3>
         <div *ngFor="let chapter of selectedBook.chapters">
-            <p (click)="selectPassage(selectedBook.title, chapter)">{{ chapter }}</p>
+            <p (click)="selectPassage(selectedBook.title, chapter)" data-testid="selectChapterBtn">{{ chapter }}</p>
         </div>
     </div>
 </div>
