--- a/client/src/app/features/controller-view/components/playlist/playlist.component.html
+++ b/client/src/app/features/controller-view/components/playlist/playlist.component.html
@@ -2,20 +2,23 @@
     <div class="header-container">
         <h2>Playlist</h2>
         <div class="playlist-search">
-            <button mat-icon-button class="search-btn" (click)="openSearchPlaylistsDialog()">
+            <button mat-icon-button class="search-btn" (click)="openSearchPlaylistsDialog()"
+                data-testid="openPlaylistSearchBtn">
                 <mat-icon>search</mat-icon>
             </button>
         </div>
     </div>
     <div class="playlist-container">
-            <div *ngIf="currentPlaylist" cdkDropList class="playlist" (cdkDropListDropped)="drop($event)">
-                <div *ngFor="let song of currentPlaylist.songs" class="playlist-song-container" cdkDrag>
-                    <span>{{ song.title }}</span>
-                    <div>
-                        <mat-icon class="live-icon" (click)="presentSong(song)">play_arrow_outline</mat-icon>
-                        <mat-icon class="delete-icon" (click)="removeSongFromPlaylist(song)">delete</mat-icon>
-                    </div>
+        <div *ngIf="currentPlaylist" cdkDropList class="playlist" (cdkDropListDropped)="drop($event)">
+            <div *ngFor="let song of currentPlaylist.songs" class="playlist-song-container" cdkDrag>
+                <span>{{ song.title }}</span>
+                <div>
+                    <mat-icon class="live-icon" (click)="presentSong(song)" data-testid="addSongToPresentationBtn">
+                        play_arrow_outline</mat-icon>
+                    <mat-icon class="delete-icon" (click)="removeSongFromPlaylist(song)"
+                        data-testid="removeSongFromPlaylistBtn">delete</mat-icon>
                 </div>
             </div>
+        </div>
     </div>
 </div>
