--- a/client/src/app/features/controller-view/components/songs/songs.component.html
+++ b/client/src/app/features/controller-view/components/songs/songs.component.html
@@ -1,11 +1,12 @@
 <mat-tab-group>
-    <mat-tab label="Songs">
+    <mat-tab label="Songs" data-testid="songsTabBtn">
         <div class="search-container">
             <mat-form-field class="search-input">
                 <mat-label>Search songs...</mat-label>
-                <input matInput [formControl]="searchSongInput">
+                <input matInput [formControl]="searchSongInput" data-testid="searchSongsInput">
             </mat-form-field>
-            <button mat-icon-button class="search-btn" (click)="syncSongs()" [disabled]="syncLoading">
+            <button mat-icon-button class="search-btn" (click)="syncSongs()" [disabled]="syncLoading"
+                data-testid="searchSongsBtn">
                 <mat-icon>sync</mat-icon>
             </button>
         </div>
@@ -13,28 +14,31 @@
             <div *ngFor="let song of songs" class="song">
                 <span>{{ song.title.split(' (')[0].split(' - ')[0] }}</span>
                 <div>
-                    <mat-icon fontIcon="add" class="add-icon" (click)="addSongToPlaylist(song)"></mat-icon>
+                    <mat-icon fontIcon="add" class="add-icon" (click)="addSongToPlaylist(song)"
+                        data-testid="addSongToPlaylistBtn"></mat-icon>
                 </div>
             </div>
         </div>
     </mat-tab>
-    <mat-tab label="Bible">
+    <mat-tab label="Bible" data-testid="bibleTabBtn">
         <div class="bible-search-container">
             <mat-form-field class="search-input">
                 <mat-label>Search bible passages...</mat-label>
-                <input matInput [formControl]="searchBibleInput">
+                <input matInput [formControl]="searchBibleInput" data-testid="searchBibleInput">
             </mat-form-field>
-            <button mat-icon-button class="bible-books-btn" (click)="openBibleBooksDialog()">
+            <button mat-icon-button class="bible-books-btn" (click)="openBibleBooksDialog()"
+                data-testid="openBibleBooksBtn">
                 <mat-icon>menu_book</mat-icon>
             </button>
         </div>
         <div *ngIf="searchedBiblePassage else noPassageFound" class="bible-passage-container">
             <button (click)="addPassageToPresentation(searchedBiblePassage)" mat-stroked-button
-                class="present-passage-btn">Present passage</button>
+                class="present-passage-btn" data-testid="addPassageToPresentationBtn">Present passage</button>
             <div *ngFor="let verse of searchedBiblePassage.verses" class="bible-verse">
                 <span><sup>{{ verse.verse }}</sup> {{ verse.text }}</span>
                 <div>
-                    <mat-icon fontIcon="add" class="add-icon" (click)="addVerseToPresentation(verse)"></mat-icon>
+                    <mat-icon fontIcon="add" class="add-icon" (click)="addVerseToPresentation(verse)"
+                        data-testid="addVerseToPresentationBtn"></mat-icon>
                 </div>
             </div>
         </div>
