--- a/client/src/app/features/controller-view/components/playlist-search-dialog/playlist-search-dialog.component.html
+++ b/client/src/app/features/controller-view/components/playlist-search-dialog/playlist-search-dialog.component.html
@@ -1,18 +1,23 @@
 <div class="mat-dialog-header">
     <h2>Search playlists</h2>
-    <button mat-icon-button class="search-btn" (click)="syncPlaylists()" [disabled]="syncLoading"
-        data-testid="syncPlaylistsBtn">
+    <button mat-icon-button (click)="syncPlaylists()" [disabled]="syncLoading" data-testid="syncPlaylistsBtn">
         <mat-icon>sync</mat-icon>
     </button>
 </div>
-<div mat-dialog-title>
-    <mat-form-field class="search-input">
-        <mat-label>Search playlists...</mat-label>
-        <input matInput [formControl]="searchPlaylist" autocomplete="off" data-testid="searchPlaylistsInput">
-    </mat-form-field>
+<div mat-dialog-title class="search-container">
+    <form (ngSubmit)="searchPlaylist()">
+        <mat-form-field class="search-input">
+            <mat-label>Search playlists...</mat-label>
+            <input matInput [formControl]="searchPlaylistsInput" autocomplete="off" data-testid="searchPlaylistsInput">
+        </mat-form-field>
+    </form>
+    <button mat-icon-button class="search-btn" (click)="searchPlaylist()" [disabled]="syncLoading"
+        data-testid="searchSongsBtn">
+        <mat-icon>search</mat-icon>
+    </button>
 </div>
 <div mat-dialog-content class="playlists-container" (scroll)="onScroll($event)">
-    <mat-accordion multi>
+    <mat-accordion *ngIf="!loadingPlaylists && !syncLoading else loading" multi>
         <mat-expansion-panel *ngFor="let playlist of playlists" (click)="displayPlaylistSongs(playlist)"
             data-testid="expandPlaylistBtn">
             <mat-expansion-panel-header>
@@ -31,4 +36,7 @@
             </div>
         </mat-expansion-panel>
     </mat-accordion>
+    <ng-template #loading>
+        <mat-spinner [diameter]="30"></mat-spinner>
+    </ng-template>
 </div>
