--- a/client/src/app/features/controller-view/components/playlist-search-dialog/playlist-search-dialog.component.scss
+++ b/client/src/app/features/controller-view/components/playlist-search-dialog/playlist-search-dialog.component.scss
@@ -6,6 +6,14 @@
     margin: 20px auto 20px auto;
 }
 
+.search-container {
+    display: flex;
+}
+
+.search-container form {
+    width: 90%;
+}
+
 .search-input {
     width: 100%;
 }
