renamed duplicate data-testid attribute name

--- a/client/src/app/features/controller-view/components/songs/songs.component.html
+++ b/client/src/app/features/controller-view/components/songs/songs.component.html
@@ -13,7 +13,7 @@
                     <mat-icon>search</mat-icon>
                 </button>
                 <button mat-icon-button class="sync-btn" (click)="syncSongs()" [disabled]="syncLoading"
-                    data-testid="searchSongsBtn">
+                    data-testid="syncSongsBtn">
                     <mat-icon>sync</mat-icon>
                 </button>
             </div>
