renamed data-testid attribute name for passage search button

--- a/client/src/app/features/controller-view/components/songs/songs.component.html
+++ b/client/src/app/features/controller-view/components/songs/songs.component.html
@@ -41,7 +41,7 @@
             </form>
             <div class="buttons-container">
                 <button mat-icon-button class="search-btn" (click)="searchPassage()" [disabled]="syncLoading"
-                    data-testid="searchSongsBtn">
+                    data-testid="searchPassagesBtn">
                     <mat-icon>search</mat-icon>
                 </button>
                 <button mat-icon-button class="bible-books-btn" (click)="openBibleBooksDialog()"
