layout bug fixes

--- a/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.scss
+++ b/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.scss
@@ -22,6 +22,10 @@
     padding-top: 25px;
 }
 
+.live-presentation-container div p {
+    line-height: 35px;
+}
+
 .pre-presentation-container {
     flex: 1.5;
 }
