--- a/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.html
+++ b/src/app/features/controller-view/components/pre-presentation/pre-presentation.component.html
@@ -18,9 +18,7 @@
         <div *ngIf="currentDisplayedSong">
             <mat-button-toggle-group name="currentDisplayedSong" class="toggle-container">
                 <mat-button-toggle *ngFor="let verse of currentDisplayedSong!.verses; let i = index"
-                    (click)="displayVerse(verse)" class="verse-container"
-                    [ngStyle]="{'font-size': fontSize + 'px', 'line-height': lineHeight + '%'}"
-                    data-testid="displayVerseBtn">
+                    (click)="displayVerse(verse)" class="verse-container" data-testid="displayVerseBtn">
                     <p *ngFor="let line of verse!.lines">{{ line }}</p>
                 </mat-button-toggle>
             </mat-button-toggle-group>
@@ -28,7 +26,6 @@
         <div *ngIf="currentDisplayedBiblePassage">
             <mat-button-toggle-group name="currentDisplayedBiblePassage" class="toggle-container">
                 <mat-button-toggle *ngFor="let slide of currentDisplayedBiblePassage" class="slide"
-                    [ngStyle]="{'font-size': fontSize + 'px', 'line-height': lineHeight + '%'}"
                     data-testid="displayPassageBtn">
                     <p (click)="displayPassage(slide)">{{ slide.text }}</p>
                 </mat-button-toggle>
@@ -36,12 +33,10 @@
         </div>
     </div>
     <div class="live-presentation-container">
-        <div *ngIf="currentDisplayedVerse && presentationConnection"
-            [ngStyle]="{'font-size': fontSize + 'px', 'line-height': lineHeight + '%'}">
+        <div *ngIf="currentDisplayedVerse && !currentDisplayedPassage && presentationConnection">
             <p *ngFor="let line of currentDisplayedVerse.lines">{{ line }}</p>
         </div>
-        <div *ngIf="currentDisplayedPassage && presentationConnection"
-            [ngStyle]="{'font-size': fontSize + 'px', 'line-height': lineHeight + '%'}">
+        <div *ngIf="currentDisplayedPassage && !currentDisplayedVerse && presentationConnection">
             <p>{{ currentDisplayedPassage.text }}</p>
         </div>
     </div>
