--- a/src/app/features/controller-view/components/playlist/playlist.component.scss
+++ b/src/app/features/controller-view/components/playlist/playlist.component.scss
@@ -37,6 +37,10 @@
     justify-content: flex-end;
 }
 
+.actions-container {
+    margin-right: 5px;
+}
+
 .delete-icon,
 .live-icon {
     color: #888888;
