--- a/src/app/features/presentation-view/components/presentation-view/presentation-view.component.scss
+++ b/src/app/features/presentation-view/components/presentation-view/presentation-view.component.scss
@@ -22,6 +22,10 @@
     margin-bottom: 60px;
 }
 
+.line {
+    line-height: 25px;
+}
+
 .bible-verse {
     margin-bottom: 0 !important;
     padding: 0 10px 0 10px;
