--- a/src/app/features/presentation-view/components/presentation-view/presentation-view.component.scss
+++ b/src/app/features/presentation-view/components/presentation-view/presentation-view.component.scss
@@ -17,9 +17,9 @@
 
 .line,
 .bible-verse {
-    line-height: initial;
     text-align: center;
-    margin-bottom: 60px;
+    margin-bottom: 0.5em;
+    line-height: 1.5em;
 }
 
 .bible-verse {
