decreased line-height for song and bible text slides

--- a/client/app/features/controller-view/components/pre-presentation/pre-presentation.component.html
+++ b/client/app/features/controller-view/components/pre-presentation/pre-presentation.component.html
@@ -10,6 +10,7 @@
             <option *ngFor="let font of bibleFontSizeOptions" [value]="font.value">{{ font.viewValue }}
             </option>
         </select>
+        <!-- Feature idea: font recommendation based on second screen data -->
         <!-- <mat-icon class="decrease-font-size-icon" (click)="decreaseFontSize()" data-testid="decreaseFontSizeBtn">
             text_decrease</mat-icon>
         <mat-icon class="increase-font-size-icon" (click)="increaseFontSize()" data-testid="increaseFontSizeBtn">
