--- a/client/app/features/controller-view/components/playlist-search-dialog/playlist-search-dialog.component.html
+++ b/client/app/features/controller-view/components/playlist-search-dialog/playlist-search-dialog.component.html
@@ -18,20 +18,22 @@
 </div>
 <div mat-dialog-content class="playlists-container" (scroll)="onScroll($event)">
     <mat-accordion *ngIf="!loadingPlaylists && !syncLoading else loading" multi>
-        <mat-expansion-panel *ngFor="let playlist of playlists" (click)="displayPlaylistSongs(playlist)"
+        <mat-expansion-panel *ngFor="let playlist of playlists" (opened)="displayPlaylistSongs(playlist, playlist._id)"
             data-testid="expandPlaylistBtn">
             <mat-expansion-panel-header>
                 <mat-panel-title>{{ playlist.title }}</mat-panel-title>
             </mat-expansion-panel-header>
-
-            <div *ngIf="formattedPlaylist" class="formatted-playlist-songs">
+            <div *ngIf="!parsingPlaylist && formattedPlaylist else loadingPlaylist" class="formatted-playlist-songs">
                 <p *ngFor="let song of formattedPlaylist.songs">
-                    {{ song }}
+                    {{ song.title }}
                     <mat-divider></mat-divider>
                 </p>
             </div>
+            <ng-template #loadingPlaylist>
+                <mat-spinner [diameter]="30"></mat-spinner>
+            </ng-template>
             <div class="action-container">
-                <button mat-flat-button color="primary" (click)="selectPlaylist(playlist)"
+                <button mat-flat-button color="primary" (click)="selectPlaylist()"
                     data-testid="selectPlaylistBtn">Select playlist</button>
             </div>
         </mat-expansion-panel>
