renamed testing selector

--- a/client/app/features/controller-view/components/playlist-search-dialog/playlist-search-dialog.component.html
+++ b/client/app/features/controller-view/components/playlist-search-dialog/playlist-search-dialog.component.html
@@ -12,7 +12,7 @@
         </mat-form-field>
     </form>
     <button mat-icon-button class="search-btn" (click)="searchPlaylist()" [disabled]="syncLoading"
-        data-testid="searchSongsBtn">
+        data-testid="searchPlaylistsBtn">
         <mat-icon>search</mat-icon>
     </button>
 </div>
