--- a/client/app/features/controller-view/components/pre-presentation/pre-presentation.component.scss
+++ b/client/app/features/controller-view/components/pre-presentation/pre-presentation.component.scss
@@ -30,6 +30,11 @@
     width: 100%;
 }
 
+#background-image-select {
+    transform: scale(0.75) !important;
+    margin-top: 10px;
+}
+
 .font-size-select {
     height: 40px;
     width: 75px;
