--- a/client/app/features/presentation-view/components/presentation-view/presentation-view.component.html
+++ b/client/app/features/presentation-view/components/presentation-view/presentation-view.component.html
@@ -1,10 +1,10 @@
-<div class="presentation-container">
-    <div *ngIf="!blackScreen && currentVerse" class="verse">
+<div class="presentation-container" [ngStyle]="{'background-image': 'url(' + backgroundImageUrl + ')'}">
+    <div *ngIf="!emptyScreen && currentVerse" class="verse">
         <div *ngFor="let line of currentVerse.lines" class="line" [ngStyle]="{'font-size': songFontSize + 'px'}">
             {{ line }}
         </div>
     </div>
-    <div *ngIf="!blackScreen && currentBiblePassage" class="passage">
+    <div *ngIf="!emptyScreen && currentBiblePassage" class="passage">
         <p class="bible-verse" [ngStyle]="{'font-size': bibleFontSize + 'px'}">
             {{ currentBiblePassage.text }}
         </p>
