--- a/client/app/features/presentation-view/components/presentation-view/presentation-view.component.scss
+++ b/client/app/features/presentation-view/components/presentation-view/presentation-view.component.scss
@@ -1,9 +1,10 @@
 .presentation-container {
     background-color: black;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
-}
 
-.presentation-container {
     display: flex;
     justify-content: center;
     color: white;
