--- a/client/src/app/features/home/components/home-page/home-page.component.html
+++ b/client/src/app/features/home/components/home-page/home-page.component.html
@@ -1,2 +1,3 @@
 <h1>Hello, Eclesia Worship!</h1>
-<p-button label="Check" icon="pi pi-check" size="small" class="my-button"></p-button>
+<!-- <p-button label="Check" icon="pi pi-check" size="small" class="my-button" routerLink="/present"></p-button> -->
+<button pButton pRipple label="Present" routerLink='/present'></button>
