polished songs and bible tabs features and added playlist view feature

--- a/client/src/app/features/present/components/controller/controller.component.scss
+++ b/client/src/app/features/present/components/controller/controller.component.scss
@@ -1,9 +1,4 @@
-app-songs-bible-tabs {
-    height: 100%;
-    width: 100%;
-}
-
-app-playlist {
+app-songs-bible-tabs, app-playlist {
     height: 100%;
     width: 100%;
 }
